# thePage

./: .contemporary.json  .parlance.json  CMakeLists.txt  thePage.pro
application/: CMakeLists.txt  application.pro  com.vicr123.thepage-blueprint.desktop  com.vicr123.thepage.desktop  com.vicr123.thepage_blueprint.desktop  documentviewer.cpp  documentviewer.h  documentviewer.ui  landingpage.cpp  landingpage.h  landingpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pageviewer.cpp  pageviewer.h  pageviewer.ui  pluginmanager.cpp  pluginmanager.h  resources.qrc
application/print/: printcontroller.cpp  printcontroller.h
application/translations/: aa_ET.ts  am_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  az_AZ.ts  bg_BG.ts  bn_BD.ts  bs_BA.ts  cr_CA.ts  de_DE.qm  de_DE.ts  en_CA.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_EC.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_CA.ts  fr_FR.ts  ha_NE.ts  hi_IN.ts  hr_HR.ts  hu_HU.ts  hy_AM.ts  id_ID.qm  (+44 more)
application/translations/desktop/com.vicr123.thepage/: en.json
application/translations/desktop/com.vicr123.thepage_blueprint/: en.json
libthepage/: CMakeLists.txt  document.cpp  document.h  documentprovider.cpp  documentprovider.h  documentprovidermanager.cpp  documentprovidermanager.h  libthepage.pro  libthepageConfig.cmake.in  libthepage_global.h  page.cpp  page.h  plugininterface.h  thepageplugininterface.h
plugins/: CMakeLists.txt  plugins.pri  plugins.pro
plugins/PopplerPlugin/: CMakeLists.txt  PopplerPlugin.json  PopplerPlugin.pro  PopplerPlugin_global.h  plugin.cpp  plugin.h  popplerdocument.cpp  popplerdocument.h  popplerdocumentprovider.cpp  popplerdocumentprovider.h  popplerpage.cpp  popplerpage.h
plugins/PopplerPlugin/translations/: aa_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  de_DE.ts  en_CA.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_FR.ts  ha_NE.ts  hi_IN.ts  hr_HR.ts  hu_HU.ts  hy_AM.ts  is_IS.ts  it_IT.ts  lb_LU.ts  lg_UG.ts  lt_LT.ts  lv_LV.ts  mg_MG.ts  mk_MK.ts  (+24 more)
